<resources>
    <string name="app_name">SortSavvy</string>
    <string name="lewati">Lewati</string>
    <string name="logo_sortsavvy">logo SortSavvy</string>
    <string name="logo_title_sortsavvy">Logo Title SortSavvy</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</string>
    <string name="onboarding_welcome_description">Hai! Selamat datang di SortSavvy.\n
        Sebelum mulai, kamu perlu masuk menggunakan akunmu terlebih dahulu ataupun buat akun baru.\n
        Jika ingin melihat-lihat fitur saja, kamu bisa klik "Guest Mode" di bawah ya ^_^</string>
    <string name="onboarding_1_title">Belajar dan Edukasi</string>
    <string name="onboarding_3_title">Quiz</string>
    <string name="onboarding_welcome_title">Welcome</string>
    <string name="onboarding_mulai_btn">Mulai</string>
    <string name="onboarding_title">Onboarding Title</string>
    <string name="onboarding_description">Onboarding Description</string>
    <string name="background_indicator">background indicator</string>
    <string name="next_btn">next button</string>
    <string name="back_btn">back button</string>
    <string name="background_thumbnail_image">Background Thumbnail Image</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="lanjutkan_guest_mode">Lanjutkan Guest Mode</string>
    <string name="title_login_register">Selamat Datang Sorters!</string>
    <string name="email">Email Anda</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="name">Nama Lengkap</string>
    <string name="confirm_password">Ulangi Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login_now">Masuk Sekarang</string>

    <string name="berburu">Berburu</string>

    <string name="status_message">Status Message</string>

    <string name="snap">snap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Beranda</string>
    <string name="title_explore">Jelajah</string>
    <string name="title_snap">Berburu</string>
    <string name="title_challenge">Tantangan</string>
    <string name="title_profile">Profil</string>

    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bottom_background_menu_snap">bottom background menu snap</string>
    <string name="background_gallery_button">background gallery button</string>
    <string name="label_cari_tau_button">Cari Tau</string>
    <string name="cari_tahu_jenis_sampah_tersebut">Cari tahu jenis sampah tersebut!</string>
    <string name="label_camera">Kamera</string>
    <string name="label_gallery">Galeri</string>
    <string name="ic_camera_logo">camera logo</string>
    <string name="label_title_request_access_camera">Akses ke kamera belum aktif :(</string>
    <string name="sub_title_request_access_camera">Yuk, aktifkan akses ke kamera dulu biar kamu bisa ambil foto objek di depanmu</string>
    <string name="label_allow_button">Izinkan</string>
    <string name="preview_selected_image">Preview selected image</string>
    <string name="label_help_1">Foto sampah di sekitarmu dengan kamera atau pilih foto dari galeri</string>
    <string name="scan_object_help">scan object help</string>
    <string name="label_help_2">Pilih cari untuk mengetahui jenis sampah yang kamu foto</string>
    <string name="label_help_3">Buanglah sampah sesuai jenisnya dan pelajari cara olahnya</string>
    <string name="label_oke_button">Oke!</string>
    <string name="scan_lagi">Scan lagi</string>
    <string name="label_title_item_card">Label Title Item Card</string>
    <string name="label_description_item_card">Label Description Item Card</string>

    <string name="error_initializing_model">Image classifier failed to initialize. See error logs for details</string>
    <string name="label_save">Simpan</string>

    <string name="tab_text_cara_olah_1">Langkah-Langkah</string>
    <string name="tab_text_cara_olah_2">Tonton Video</string>
</resources>