<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_beranda"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore_home"
        android:icon="@drawable/icon_jelajah"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_snap"
        android:icon="@drawable/icon_beruru"
        android:title="@string/title_snap" />

    <item
        android:id="@+id/navigation_challenge_home"
        android:icon="@drawable/icon_tantangan"
        android:title="@string/title_challenge" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profil"
        android:title="@string/title_profile" />

</menu>