<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.sortsavvy.views.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.bangkit.sortsavvy.views.main.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_snap"
        android:name="com.bangkit.sortsavvy.views.main.snap.SnapFragment"
        android:label="@string/title_snap"
        tools:layout="@layout/fragment_snap" />

    <fragment
        android:id="@+id/navigation_challenge"
        android:name="com.bangkit.sortsavvy.views.main.challenge.ChallengeFragment"
        android:label="@string/title_challenge"
        tools:layout="@layout/fragment_challenge" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.sortsavvy.views.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>