<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/thumbImgv"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo_sortsavvy"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/baloo_bhai_2_bold"
        android:text="@string/onboarding_title"
        android:textSize="26sp"
        android:textColor="@color/emerald_green" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/onboarding_description"
        android:textColor="@color/font_black"
        android:textSize="16sp"
        android:textAlignment="center"/>

</LinearLayout>