<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    android:fitsSystemWindows="true"
    tools:context="com.bangkit.sortsavvy.onboarding.ui.OnboardingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboardingViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/background_thumbnail_image"
        android:background="@drawable/onboarding_rounded_background"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/backgroundIndicatorImgv"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/skipTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/lewati"
        android:textSize="19sp"
        android:textColor="@color/font_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoTitleImgv"
        android:layout_width="114dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/logo_title_sortsavvy"
        android:src="@drawable/onboarding_logo_title_sortsavvy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skipTv" />

    <ImageView
        android:id="@+id/backgroundIndicatorImgv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/background_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/onboarding_background_indicator" />

    <LinearLayout
        android:id="@+id/dotIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="84dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/nextBtnImgv"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/icon_background_next_btn"
        android:contentDescription="@string/next_btn"
        android:padding="10dp"
        android:src="@drawable/round_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:visibility="gone"
        android:id="@+id/getStartedBtn"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:fontFamily="@font/baloo_bhai_2_bold"
        android:text="@string/onboarding_mulai_btn"
        android:layout_gravity="right"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="63dp"
        app:cornerRadius="60dp"
        android:backgroundTint="@color/white_gray"
        android:textColor="@color/emerald_green"
        android:drawableRight="@drawable/round_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>